# rue

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  app.avdl  configure  intro.ddh  makefile  makefile.in  rue.spec  snapcraft.yaml
.github/workflows/: .auto-merge-stable.yml  .build-auto.yml  .build.yml
assets/: button.ply  button_disabled.ply  button_exit.ply  button_minus.ply  button_options.ply  button_play.ply  button_plus.ply  button_toggle.ply  card.ply  card_border.ply  character.ply  eye.ply  game_copy.json  game_copy_de.json  game_copy_el.json  game_copy_ja.json  game_theme.opus  letter_0.ply  letter_1.ply  letter_2.ply  letter_3.ply  letter_4.ply  letter_5.ply  letter_6.ply  letter_7.ply  letter_8.ply  letter_9.ply  letter_a.ply  letter_b.ply  letter_c.ply  letter_d.ply  letter_e.ply  letter_f.ply  letter_g.ply  letter_h.ply  letter_i.ply  letter_j.ply  letter_k.ply  letter_l.ply  letter_m.ply  (+36 more)
debian/: changelog  control  copyright  rules
dependencies-cmake/: glew-config.cmake  sdl2-config.cmake  sdl2_mixer-config.cmake
include/: button.ddh  card.ddh  credits.ddh  custom_game_menu.ddh  game.ddh  intro.ddh  menu.ddh  menu_custom_game.ddh  menu_home.ddh  menu_multiplayer.ddh  menu_stages.ddh  options.ddh  overlayButtons.ddh  player.ddh  saveload.ddh
metadata/: changelog.md  metadata.json  metadata_de.json  metadata_el.json  metadata_ja.json  org.darkdimension.rue.desktop  org.darkdimension.rue.metainfo.xml
metadata/achievements/: 1707310_loc_english.vdf
src/: button.dd  card.dd  credits.dd  custom_game_menu.dd  game.dd  intro.dd  main.dd  main_game.dd  menu.dd  menu_custom_game.dd  menu_home.dd  menu_multiplayer.dd  menu_stages.dd  options.dd  overlayButtons.dd  pch.cpp  player.dd  saveload.dd
travis/: build_linux.sh  build_linux_steam.sh  build_windows.sh  build_windows_steam.sh
